# clawshield

./: .env.local.example  .eslintrc.cjs  .gitignore  README.md  install.ndjson  package-lock.json  package.json  tsconfig.json
apps/cloud/: README.md  package.json
apps/dashboard/: README.md  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
apps/dashboard/src/app/: globals.css  layout.tsx  page.tsx
apps/dashboard/src/app/dashboard/: page.tsx
apps/dashboard/src/app/settings/: page.tsx
apps/dashboard/src/app/setup/: page.tsx
apps/dashboard/src/app/skills/: page.tsx
apps/dashboard/src/app/voice/: page.tsx
apps/dashboard/src/lib/: agent-socket.ts  encryption.ts
apps/desktop/: README.md  package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
docker/: docker-compose.yml
docker/agent/: Dockerfile
docker/gateway/: Dockerfile
docs/: building-skills.md
scripts/: install.ps1  install.sh  start.ps1
